# Computer-Graphics-Cup

./: .gitignore  BoundingBox.hpp  CMakeLists.txt  Cone.hpp  Hit.hpp  Light.hpp  Material.h  OBJ.hpp  Object.hpp  Plane.hpp  Ray.hpp  Scene.hpp  Sphere.hpp  Tree.hpp  Triangle.hpp  Utils.hpp  main.cpp  makefile  readme.md
